--- a/donor-info.html
+++ b/donor-info.html
@@ -101,9 +101,7 @@
     </section>
   </main>
 
-  <footer>
-    <p><a href="index.html">← Back to Home</a></p>
-  </footer>
+<div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
