--- a/es/donor-info.html
+++ b/es/donor-info.html
@@ -114,9 +114,7 @@
     </section>
   </main>
 
-  <footer>
-    <p><a href="/es/index.html">← Volver al inicio</a></p>
-  </footer>
+<div data-include="/includes_es/footer.html"></div>
 
   <script src="/scripts/analytics.js" defer></script>
 </body>
