--- a/book.html
+++ b/book.html
@@ -59,8 +59,16 @@
       </ul>
     </p>
 
-    <p><strong>Available in paperback and ebook formats.</strong> Visit your favorite bookstore or <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1" target="_blank" rel="noopener">buy on Amazon here</a>.</p>
-  </main>
+  
+  <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1" class="button button--primary button--lg">
+    📖 Get *Tito Needs a Kidney* on Amazon
+  </a>
+</p>
+<p class="cta-note">
+  Available in paperback and Kindle ebook — or ask at your local bookstore.
+</p>
+
+ </main>
 
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
