--- a/es/book.html
+++ b/es/book.html
@@ -57,11 +57,16 @@
       <li>Quien necesite ver cómo se ve la esperanza en la práctica</li>
     </ul>
 
-    <p><strong>Disponible en formatos tapa blanda y libro electrónico.</strong>
-      Visita tu librería de preferencia o
-      <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1"
-         target="_blank" rel="noopener">cómpralo en Amazon aquí</a>.
-    </p>
+
+    <p>
+  <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1">
+    📖 Consigue *Tito necesita un riñón* en Amazon
+  </a>
+</p>
+<p class="cta-note">
+  Disponible en tapa blanda y libro electrónico — o pide en tu librería favorita.
+</p>
+
   </main>
 
   <div data-include="/includes_es/footer.html"></div>
