--- a/es/book.html
+++ b/es/book.html
@@ -59,7 +59,7 @@
 
 
     <p>
-  <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1" class="button button--primary button--lg">
+  <a href="https://www.amazon.com/TITO-NECESITA-RI%C3%91%C3%93N-resiliencia-comunidad/dp/B0GCVN3YJW/ref=mp_s_a_1_1?crid=2FF5AKOY4WERJ&dib=eyJ2IjoiMSJ9.y-Z-JdcXiHtey5NearnKZA.1KWRO2PHENpfG6YRcae8Sm6wpx5JEaFRv14lGUM9xWk&dib_tag=se&keywords=tito+necesita+un+ri%C3%B1on&qid=1767123453&sprefix=tito+necesita+un+ri%C3%B1on%2Caps%2C108&sr=8-1" class="button button--primary button--lg">
     📖 Consigue *Tito necesita un riñón* en Amazon
   </a>
 </p>
